2003-07-17  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Fixed epiphany pot name.

2003-07-15  Carlos Perelló Marín <carlos@pemas.net>

	* Removed obsoleted GNOME 1.4 modules.

2003-07-06  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: totem is now included in the desktop.

2003-07-06  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: mlview HEAD is gtk2 based now.

2003-07-02  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added nautilus-rc.

2003-06-30  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Add gimp-gap.

2003-06-28  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Remove libglade, which has no translatable
	string.

2003-06-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Fixed a sorting error.

2003-06-28  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Tried to add the modules from the 2.4
	modules list.

2003-06-27  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Changed branches for evolution and gtkhtml.

2003-06-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gossip.

2003-06-16  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: drgenius2 becomes drgeo.

2003-06-13  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Remove popt (not gnome software), gnomeicu
	  from gnome-1.4 (no future release), mlview from gnome-2.4 (doesn't
	  belong).

2003-06-13  Abel Cheung  <maddog@linux.org.hk>

	* translation-status.xml: Move drgenius and sodipodi to gnome-2.4.
	  Fix pot name for gedit HEAD.

2003-06-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-mud.

2003-06-12  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added back gtranslator.

2003-06-10  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-netstatus.

2003-06-10  Christian Rose  <menthos@menthos.com>
