@@ -639,7 +639,7 @@
     <version release="gnome-2.4">
       <component name="gimp-freetype" dir="gimp-freetype" group="extras">
         <podir dir="po"/>
-        <potname name="gimp14-freetype.pot"/>
+        <potname name="gimp20-freetype.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
         <download/>
@@ -653,31 +653,31 @@
       </component>
       <component name="gimp" dir="gimp" group="extras">
         <podir dir="po"/>
-        <potname name="gimp14.pot"/>
+        <potname name="gimp20.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
       </component>
       <component name="gimp-libgimp" dir="gimp" group="extras">
         <podir dir="po-libgimp"/>
-        <potname name="gimp14.pot"/>
+        <potname name="gimp20.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
       </component>
       <component name="gimp-plug-ins" dir="gimp" group="extras">
         <podir dir="po-plug-ins"/>
-        <potname name="gimp14.pot"/>
+        <potname name="gimp20.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
       </component>
       <component name="gimp-script-fu" dir="gimp" group="extras">
         <podir dir="po-script-fu"/>
-        <potname name="gimp14.pot"/>
+        <potname name="gimp20.pot"/>
         <branch name="HEAD"/>
         <regenerate/>
       </component>
       <component name="gimp-tips" dir="gimp" group="extras">
         <podir dir="tips"/>
-        <potname name="gimp14-tips.pot"/>
+        <potname name="gimp20-tips.pot"/>
         <branch name="HEAD"/>
       </component>
     </version>
