@@ -1,3 +1,7 @@
+2003-07-23  Abel Cheung  <maddog@linux.org.hk>
+
+	* translation-status.xml: Fix gimp-* pot name.
+
 2003-07-17  Abel Cheung  <maddog@linux.org.hk>
 
 	* translation-status.xml: Fixed epiphany pot name.
